Moved CSS to prevent table overflow into seperate class (table-prevent-overflow already commited wih comit [9de5b6b])

--- a/src/Presentation/SmartStore.Web/Administration/Content/_dashboard.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/_dashboard.scss
@@ -20,9 +20,6 @@
 
         tr > th,
         tr > td {
-            overflow-x: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
             border-top: 0;
             padding-left: 1rem;
             padding-right: 1rem;
